Revert "Feat/harvest management"