@@ -8,23 +8,26 @@ import id.ac.ui.cs.advprog.palmerymanage.event.HarvestSubmittedEvent;
 import id.ac.ui.cs.advprog.palmerymanage.model.HarvestPhoto;
 import id.ac.ui.cs.advprog.palmerymanage.model.HarvestResult;
 import id.ac.ui.cs.advprog.palmerymanage.model.Plantation;
+import id.ac.ui.cs.advprog.palmerymanage.model.PlantationAssignment;
+import id.ac.ui.cs.advprog.palmerymanage.model.WorkerAssignment;
 import id.ac.ui.cs.advprog.palmerymanage.repository.HarvestResultRepository;
+import id.ac.ui.cs.advprog.palmerymanage.repository.PlantationAssignmentRepository;
+import id.ac.ui.cs.advprog.palmerymanage.repository.WorkerAssignmentRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.lang.NonNull;
 import id.ac.ui.cs.advprog.palmerymanage.service.validation.HarvestValidator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.RestClient;
-import org.springframework.web.client.RestClientException;
 
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -37,42 +40,34 @@ public class HarvestService {
     private final PlantationService plantationService;
     private final PlantationValidationService plantationValidationService;
     private final HarvestEventPublisher eventPublisher;
-    private final WorkerAssignmentService workerAssignmentService;
-    private final RestClient restClient;
     private final List<HarvestValidator> validators;
-
-    @Value("${assignment.api.url:}")
-    private String assignmentApiUrl;
-
-    @Value("${assignment.api.dummy:false}")
-    private boolean useDummyAssignment;
+    private final WorkerAssignmentRepository workerAssignmentRepository;
+    private final PlantationAssignmentRepository plantationAssignmentRepository;
 
     @Autowired
     public HarvestService(HarvestResultRepository harvestResultRepository,
                           PlantationService plantationService,
                           PlantationValidationService plantationValidationService,
                           HarvestEventPublisher eventPublisher,
-                          WorkerAssignmentService workerAssignmentService,
-                          List<HarvestValidator> validators) {
+                          List<HarvestValidator> validators,
+                          WorkerAssignmentRepository workerAssignmentRepository,
+                          PlantationAssignmentRepository plantationAssignmentRepository) {
         this.harvestResultRepository = harvestResultRepository;
         this.plantationService = plantationService;
         this.plantationValidationService = plantationValidationService;
         this.eventPublisher = eventPublisher;
-        this.workerAssignmentService = workerAssignmentService;
         this.validators = validators;
-        this.restClient = RestClient.create();
+        this.workerAssignmentRepository = workerAssignmentRepository;
+        this.plantationAssignmentRepository = plantationAssignmentRepository;
     }
 
     @Transactional(isolation = Isolation.READ_COMMITTED)
     public HarvestResult submitHarvest(UUID workerId, HarvestRequestDto request) {
+        // Eksekusi semua validasi secara dinamis (Strategy Pattern)
         for (HarvestValidator validator : validators) {
             validator.validate(workerId, request);
         }
-
-        if (!useDummyAssignment && !workerAssignmentService.isWorkerUnderMandor(request.getMandorId(), workerId)) {
-            throw new IllegalArgumentException(
-                    "Buruh ini tidak ditugaskan kepada Mandor tersebut. Hubungi Admin untuk pengaturan penempatan.");
-        }
+        validateWorkerSubmissionScope(workerId, request);
 
         Plantation plantation = new Plantation();
         plantation.setId(request.getPlantationId());
@@ -113,29 +108,20 @@ public class HarvestService {
         return saved;
     }
 
-    private boolean checkIsAnakBuah(UUID mandorId, UUID workerId) {
-        if (useDummyAssignment) {
-            logger.info("[DUMMY] Buruh {} diasumsikan bawahan Mandor {}", workerId, mandorId);
-            return true;
+    private void validateWorkerSubmissionScope(UUID workerId, HarvestRequestDto request) {
+        WorkerAssignment assignment = workerAssignmentRepository.findById(workerId)
+                .orElseThrow(() -> new IllegalStateException("Buruh belum ditugaskan ke Mandor"));
+
+        if (!assignment.getMandorId().equals(request.getMandorId())) {
+            throw new IllegalStateException("Buruh hanya dapat mengirim panen ke Mandor yang ditugaskan");
         }
 
-        if (workerAssignmentService.isWorkerUnderMandor(mandorId, workerId)) {
-            return true;
-        }
-
-        if (assignmentApiUrl == null || assignmentApiUrl.isBlank()) {
-            return false;
-        }
-
-        try {
-            Boolean isAnakBuah = restClient.get()
-                    .uri(assignmentApiUrl + "/check?mandorId={mandorId}&workerId={workerId}", mandorId, workerId)
-                    .retrieve()
-                    .body(Boolean.class);
-            return Boolean.TRUE.equals(isAnakBuah);
-        } catch (IllegalArgumentException | IllegalStateException | RestClientException e) {
-            logger.error("Assignment API call failed: {}", e.getMessage());
-            return false;
+        boolean mandorAssignedToPlantation = plantationAssignmentRepository
+                .findByPersonnelIdAndRole(request.getMandorId(), PlantationAssignment.PersonnelRole.MANDOR)
+                .stream()
+                .anyMatch(plantationAssignment -> plantationAssignment.getPlantationId().equals(request.getPlantationId()));
+        if (!mandorAssignedToPlantation) {
+            throw new IllegalStateException("Mandor belum ditugaskan ke kebun yang dipilih");
         }
     }
 
@@ -152,7 +138,7 @@ public class HarvestService {
             throw new IllegalStateException("Laporan ini sudah divalidasi dan tidak dapat diubah lagi.");
         }
 
-        if (!checkIsAnakBuah(mandorId, harvest.getWorkerId())) {
+        if (!workerAssignmentRepository.existsByWorkerIdAndMandorId(harvest.getWorkerId(), mandorId)) {
             throw new IllegalStateException("Akses Ditolak: Buruh ini bukan di bawah pengawasan Anda!");
         }
 
@@ -206,10 +192,27 @@ public class HarvestService {
 
     public List<HarvestResult> getMandorHistory(UUID mandorId, LocalDate date, UUID filterWorkerId) {
         if (mandorId == null) {
-            return harvestResultRepository.findMandorHistory(date, filterWorkerId);
+            throw new IllegalArgumentException("Mandor ID tidak boleh kosong");
         }
-        return harvestResultRepository.findMandorHistory(date, filterWorkerId).stream()
-                .filter(h -> mandorId.equals(h.getMandorId()))
-                .collect(Collectors.toList());
+
+        List<UUID> assignedWorkerIds = workerAssignmentRepository.findByMandorId(mandorId).stream()
+                .map(WorkerAssignment::getWorkerId)
+                .toList();
+        if (assignedWorkerIds.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        if (filterWorkerId != null) {
+            if (!assignedWorkerIds.contains(filterWorkerId)) {
+                return Collections.emptyList();
+            }
+            return harvestResultRepository.findMandorHistory(date, filterWorkerId).stream()
+                    .filter(harvest -> Objects.equals(harvest.getMandorId(), mandorId))
+                    .toList();
+        }
+
+        return harvestResultRepository.findMandorHistoryByWorkerIds(assignedWorkerIds, date).stream()
+                .filter(harvest -> Objects.equals(harvest.getMandorId(), mandorId))
+                .toList();
     }
 }
